src/test/compile-fail/issue-6977.rs
//xfail-test

// Trying to create a fixed-length vector with a negative size

fn main() {
      let _x = [0,..-1];
}
